Добавлена загрузка фото на сервер